# sidoma

./: Cargo.toml  README.md
src/: app.rs  cli.rs  main.rs  templater.rs  utils.rs
src/linkmanager/: mod.rs  symlink.rs
