[package]
name = "sidoma"
version = "0.1.0"
edition = "2021"
authors = ["herlev"]
description = "Simple Dotfile Manager"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.18", features = ["derive"] }
colored = "2.0.0"
dirs = "4.0.0"
glob = "0.3.1"
itertools = "0.10.5"
minijinja = { version = "1.0.5", features = ["loader"] }
path-clean = "0.1.0"
pathdiff = "0.2.1"
toml = "0.7.6"

[dev-dependencies]
serial_test = "0.9.0"
test_dir = "0.2.0"
